
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* big overhauling of composites
	this breaks backwards API compatibility in a subtle way, BEWARE!
	- changed behaviour of optional composites,
		setter accepts null now for optional Composites and
		getter returns null.
	- renamed Composite to CompositeField and Composite.Value to Composite,
		making it a top-level class
	- Composite checks its values for violation of field constraints,
		such as mandatory, string length, integer range etc.
	- final fields in Composite are not supported
		and cause an exception to be thrown
	- Composites do get instrumentation
* replace AbstractListField.getElementValueClass() by getElement()
	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
* LimitedListField throws ListSizeViolationException instead of IllegalArgumentException
* add AbstractListField.getMaximumSize()
* replace SchemaInfo.getColumnValue(EnumField, Enum) by getColumnValue(Enum)
	deprecated version is provided
* add @CopeSchemaValue for enum values
* add ItemCacheInfo.getConcurrentLoads()
	replaces message on System.out: warning: duplicate computation of state ...
* add SchemaInfo.quoteName
* remove automatic detection of convert in MediaImageMagickFilter
	now you need a java system property to enable:
		com.exedio.cope.media.imagemagick=true
* console history adds a column for ClusterSenderInfo.getInvalidationSplit()
	requires modification of persistent schema
* MandatoryViolation and FinalViolation for PriceField has PriceField itself as feature, not the source-Field of the PriceField
	this breaks backwards API compatibility, but is likely to affect a generic backoffice only