@@ -7,6 +7,9 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* replace Model.isDatabaseLogEnabled/getDatabaseLogThreshold/getDatabaseLogSQL by getDatabaseListener
+	replace setDatabaseLog by setDatabaseListener
+	this breaks backwards API compatibility, but is likely to affect cope console only
 * big overhauling of composites
 	this breaks backwards API compatibility in a subtle way, BEWARE!
 	- changed behaviour of optional composites,
